@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod.c,v 1.35 2005-04-29 18:59:26 achu Exp $
+ *  $Id: cerebrod.c,v 1.36 2005-04-30 16:10:49 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -38,6 +38,7 @@ pthread_mutex_t debug_output_mutex = PTHREAD_MUTEX_INITIALIZER;
 #endif /* NDEBUG */
 
 extern struct cerebrod_config conf;
+extern int cerebrod_clusterlist_module_found;
 
 extern int cerebrod_listener_initialization_complete;
 extern pthread_cond_t cerebrod_listener_initialization_complete_cond;
@@ -74,16 +75,19 @@ _cerebrod_post_config_initialization(void)
     cerebro_err_exit("%s(%s:%d): cerebrod_clusterlist_module_setup",
                      __FILE__, __FUNCTION__, __LINE__);
 
-  if (conf.clusterlist_module_options)
+  if (cerebrod_clusterlist_module_found)
     {
-      if (cerebro_clusterlist_parse_options(conf.clusterlist_module_options) < 0)
-        cerebro_err_exit("%s(%s:%d): cerebro_clusterlist_parse_options",
-                         __FILE__, __FUNCTION__, __LINE__);
+      if (conf.clusterlist_module_options)
+	{
+	  if (cerebro_clusterlist_parse_options(conf.clusterlist_module_options) < 0)
+	    cerebro_err_exit("%s(%s:%d): cerebro_clusterlist_parse_options",
+			     __FILE__, __FUNCTION__, __LINE__);
+	}
+      
+      if (cerebro_clusterlist_setup() < 0)
+	cerebro_err_exit("%s(%s:%d): cerebro_clusterlist_setup",
+			 __FILE__, __FUNCTION__, __LINE__);
     }
-
-  if (cerebro_clusterlist_setup() < 0)
-    cerebro_err_exit("%s(%s:%d): cerebro_clusterlist_setup",
-                     __FILE__, __FUNCTION__, __LINE__);
 
   if (conf.updown_server)
     Signal(SIGPIPE, SIG_IGN);
@@ -99,7 +103,8 @@ _cerebrod_post_config_initialization(void)
 static void
 _cerebrod_cleanup(void)
 {
-  cerebro_module_cleanup();
+  if (cerebrod_clusterlist_module_found)
+    cerebro_module_cleanup();
 }
 #endif
 
